--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,4 +9,12 @@
     </main>
         {%- include footer.html -%}
     </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.0.0/mermaid.min.js"></script>
+<script>
+   mermaid.initialize({
+       startOnLoad:true,
+       theme: 'default'
+   });
+   window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+</script>
 </html>
