--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,7 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
   {%- include google-analytics.html -%}
   {%- endif -%}
+  {% if page.mermaid %}
+  {% include mermaid.html %}
+  {% endif %}
 </head>
