--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,7 @@
   {% if page.mermaid %}
   {% include mermaid.html %}
   {% endif %}
+  {% if page.math %}
+  {% include math.html %}
+  {% endif %}
 </head>
