--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,24 +1,7 @@
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="google-site-verification" content="JieIMm38x30K6oVdqEsUAwiOMwucdudUfas6fJ87L_Q" />
-  {%- seo title=false -%}
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css" />
-  <link rel="shortcut icon" type="image/x-icon" href="/{{ site.favicon }}" />
-  <link rel="stylesheet" href="{{ site.url }}/assets/css/agate.css" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/highlight.min.js"></script>
-  <script>
-    hljs.initHighlightingOnLoad();
-  </script>
-  {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-  {%- include google-analytics.html -%}
-  {%- endif -%}
-  {% if page.mermaid %}
-  {% include mermaid.html %}
-  {% endif %}
-  {% if page.math %}
-  {% include math.html %}
-  {% endif %}
-</head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link href="https://fonts.googleapis.com/css?family=Merriweather:300|Raleway:400,700" rel="stylesheet">
+<link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+<title>{{ page.title | default: site.title }}</title>
+{% seo %}
