--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,10 @@
 <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 <meta name="google-site-verification" content="JieIMm38x30K6oVdqEsUAwiOMwucdudUfas6fJ87L_Q" />
 <title>{{ page.title | default: site.title }}</title>
+{% seo %}
+{% if site.plainwhite.dark_mode %}
+<script type="text/javascript" src="{{ "/assets/js/darkmode.js" | relative_url }}"></script>
+{% endif %}
 {% if page.math %}
 {% include math.html %}
 {% endif %}
-
-{% seo %}
